# Calculator

./: CMakeLists.txt  README.md  main.cpp  main.hpp
Calculatortest/: CMakeLists.txt  Test.cpp
Calculatortest/test/: CMakeLists.txt  CalculatorTest.cpp
